# openstreetmap-tags-to-rivescript

./: .gitignore  README.md  requirements.txt  setup.cfg  shell.py  tox.ini
.github/workflows/: main.yml
example/brain/: generico.rive  osm-tagging-pt.rive  osm-tagging-reverse_pt.rive  osm-tagging_pt.rive
src/osmtags2rive/: __init__.py  cli.py  constants.py  osmtags2rive.py
tests/: test_osmtags2rive.py
