[metadata]
name = osmtags2rive
version = 0.5.0
author = Emerson Rocha
author_email = rocha@ieee.org
description = Use MediaWiki Wiki page content as read-only database
long_description = file: README.md
# long_description = file: README.md, CHANGELOG.md
long_description_content_type = text/markdown
url = https://github.com/fititnt/openstreetmap-tags-to-rivescript
project_urls =
    Bug Tracker = https://github.com/fititnt/openstreetmap-tags-to-rivescript/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: The Unlicense (Unlicense)
    Operating System :: OS Independent
    Typing :: Typed
    Topic :: Utilities

[options]
# package_dir =
#     = src
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.packages.find]
where = src
# Runtime dependencies (varies by binary)
#     pip install libhxl pyyaml langcodes python-liquid

# [options.package_data]
# hxltm.bin = *.yml

[options.entry_points]
console_scripts =
    osmtags2rive = osmtags2rive.cli:exec_from_console_scripts

#### pypi ______________________________________________________________________
### Upload, register step ------------------------------------------------------

## @see https://packaging.python.org/tutorials/packaging-projects/
# python3 -m pip install --upgrade build
# python3 -m build
#
# To install locally (example v0.5.0)
#      python3 -m build ; python3 -m pip install dist/osmtags2rive-0.5.0-py3-none-any.whl --force
## Note: create token a save on $HOME/.pypirc
##       the instructions will be from
#        - https://test.pypi.org/manage/account/token/
#        - https://pypi.org/manage/account/token/

### Upload, each new version ---------------------------------------------------
# Note: remember to replace the version number also by string replace, as
#       since some files beyond setup.cfg also have the reference
# rm dist/*
# python3 -m build
# python3 -m twine upload --repository pypi dist/*